CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(LUA-SOCKET)

SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(PATH_LUA ${CMAKE_SOURCE_DIR}/src/lua)
SET(PATH_LUASOCKET ${CMAKE_SOURCE_DIR}/src/luasocket)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/cache/lib)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/cache/bin)
SET(CMAKE_BUILD_TYPE release)
SET(CMAKE_C_FLAGS_RELEASE "-Os -s")
SET(CMAKE_CXX_FLAGS_RELEASE "-Os -s")

ADD_DEFINITIONS(-w)
ADD_DEFINITIONS(-fno-exceptions)
ADD_DEFINITIONS(-fno-strict-aliasing)
ADD_DEFINITIONS(-fno-asynchronous-unwind-tables)
ADD_DEFINITIONS(-fno-threadsafe-statics)
ADD_DEFINITIONS(-fomit-frame-pointer)

ADD_SUBDIRECTORY(${PATH_LUA})
ADD_SUBDIRECTORY(${PATH_LUASOCKET})